feat: add Feedback page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: devquiz
-description: DevQuiz
+description: DevQuiz from NLW#5 by Rocketseat, developed with the original idea from Figma layout.
 version: 1.0.0+1
 
 environment:
