--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.0.0
   provider: ^5.0.0
+  share_plus: ^2.0.3
 
 dev_dependencies:
   flutter_test:
